# SLR-agent

./: .gitignore  README.md  pyproject.toml
docs/: agentic_improvements.md  architecture.md  diagrams.md  extraction_approach.md  greenbergolem_learnings.md  mitl_critic_roadmap.md
docs/superpowers/plans/: 2026-04-03-observability-hitl-manuscript.md  2026-04-03-slr-agent.md
docs/superpowers/specs/: 2026-04-03-observability-hitl-manuscript-design.md  2026-04-03-slr-agent-design.md
slr_agent/: broker.py  cache.py  citation_network.py  cli.py  config.py  db.py  emitter.py  export.py  grounding.py  llm.py  orchestrator.py  prisma.py  state.py  template.py  trace.py
slr_agent/subgraphs/: extraction.py  fulltext.py  manuscript.py  pico.py  screening.py  search.py  synthesis.py
slr_agent/ui/: app.py
slr_agent/ui/panels/: extraction.py  generic.py  manuscript_panel.py  pico.py  screening.py  search.py  synthesis.py
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/integration/: test_extraction_subgraph.py  test_fulltext_subgraph.py  test_manuscript_subgraph.py  test_orchestrator_routing.py  test_pico_subgraph.py  test_screening_subgraph.py  test_search_subgraph.py  test_synthesis_subgraph.py
tests/unit/: test_broker.py  test_cache.py  test_citation_network.py  test_db.py  test_db_manual_add.py  test_emitter.py  test_grounding.py  test_grounding_regression.py  test_llm.py  test_state.py  test_template.py
